toggle shell size

--- a/settings.html
+++ b/settings.html
@@ -1,35 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Browser Shell — Settings</title>
-        <link rel="stylesheet" type="text/css" href="./src/settings/settings.css">
-    </head>
-    <body>
-        <div class="container">
-            <form id="settings-form">
-                <div class="fieldset">
-                    <div class="li">
-                        <label for="debugPrefix">
-                            <span>Debug Prefix</span>
-                            <span class="input">
-                                <input type="text" id="debugPrefix" name="debugPrefix" />
-                            </span>
-                        </label>
-                    </div>
-                    <div class="li">
-                        <label for="openShell">
-                            <span>Open Shell</span>
-                            <span class="input">
-                                <input type="text" id="openShell" name="openShell" />
-                            </span>
-                        </label>
-                    </div>
-                </div>
-                <button type="submit">Save Settings</button>
-            </form>
-        </div>
-        <script src="./src/settings/settings.ts" type="module"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Browser Shell — Settings</title>
+    <link rel="stylesheet" type="text/css" href="./src/settings/settings.css">
+  </head>
+  <body>
+    <div class="container">
+      <form id="settings-form">
+        <section>
+          <div class="section-title">
+            <span>Settings</span>
+          </div>
+
+          <div class="fieldset">
+            <div class="li">
+              <label for="debugPrefix">
+                <span>Debug Prefix</span>
+                <span class="input">
+                  <input type="text" id="debugPrefix" name="debugPrefix" />
+                </span>
+              </label>
+            </div>
+
+            <div class="li">
+              <label for="shellHeight">
+                <span>Shell height</span>
+                <span class="input">
+                  <input type="text" id="shellHeight" name="shellHeight" />
+                </span>
+              </label>
+            </div>
+          </div>
+        </section>
+
+        <section>
+          <div class="section-title">
+            <span>Commands</span>
+          </div>
+          <div class="fieldset">
+            <div class="li">
+              <label for="openShell">
+                <span>Open Shell</span>
+                <span class="input">
+                  <input type="text" id="openShell" name="openShell" />
+                </span>
+              </label>
+            </div>
+            <div class="li">
+              <label for="toggleFullscreen">
+                <span>Toggle Fullscreen</span>
+                <span class="input">
+                  <input type="text" id="toggleFullscreen" name="toggleFullscreen" />
+                </span>
+              </label>
+            </div>
+          </div>
+        </section>
+
+        <button type="submit">Save Settings</button>
+      </form>
+    </div>
+    <script src="./src/settings/settings.ts" type="module"></script>
+  </body>
 </html>
